--- a/assets/languages/en-US.json
+++ b/assets/languages/en-US.json
@@ -234,14 +234,14 @@
     "treble_boost_info": "high level of sound reinforcement in the audio track",
     "treble_frequency": "High-pass filter cutoff frequency (Hz)",
     "treble_frequency_info": "The frequency will be filtered out. The higher the frequency, the higher the sound will be retained.",
-    "limiter_threashold_db": "Limiter threshold",
-    "limiter_threashold_db_info": "Limit the maximum audio level to prevent it from exceeding the threshold",
+    "limiter_threshold_db": "Limiter threshold",
+    "limiter_threshold_db_info": "Limit the maximum audio level to prevent it from exceeding the threshold",
     "limiter_release_ms": "Release time",
     "limiter_release_ms_info": "Time for the audio to return after being limited (Mili Seconds)",
     "distortion_info": "Adjust the level of distortion to create a noisy effect",
     "gain_info": "Adjust the volume level of the signal",
-    "clipping_threashold_db": "Clipping threshold",
-    "clipping_threashold_db_info": "Trim signals exceeding the threshold, creating a distorted sound",
+    "clipping_threshold_db": "Clipping threshold",
+    "clipping_threshold_db_info": "Trim signals exceeding the threshold, creating a distorted sound",
     "bitcrush_bit_depth": "Bit depth",
     "bitcrush_bit_depth_info": "Reduce audio quality by decreasing bit depth, creating a distorted effect",
     "phaser_depth": "Phaser depth",
@@ -254,8 +254,8 @@
     "phaser_centre_frequency_hz_info": "The center frequency of the phaser effect, affecting the adjusted frequencies",
     "phaser_feedback": "Feedback",
     "phaser_feedback_info": "Adjust the feedback level of the effect, creating a stronger or lighter phaser feel",
-    "compressor_threashold_db": "Compressor threshold",
-    "compressor_threashold_db_info": "The threshold level above which the audio will be compressed",
+    "compressor_threshold_db": "Compressor threshold",
+    "compressor_threshold_db_info": "The threshold level above which the audio will be compressed",
     "compressor_ratio": "Compression ratio",
     "compressor_ratio_info": "Adjust the level of audio compression when exceeding the threshold",
     "compressor_attack_ms": "Attack time (ms)",
@@ -824,5 +824,7 @@
     "proposal_pitch": "Automatically propose pitch",
     "hybrid_calc": "Hybrid calculation for method: {f0_method}...",
     "proposal_f0": "Proposed pitch: {up_key}",
-    "startautotune": "Start autotune pitch..."
+    "startautotune": "Start autotune pitch...",
+    "proposal_pitch_threshold": "Proposal Pitch Threshold",
+    "proposal_pitch_threshold_info": "Proposal Pitch Threshold, for male models use 155.0 and female models use 255.0"
 }
